Fix letter-spacing formatting and transition duration in CSS for consistency

--- a/index.css
+++ b/index.css
@@ -14,7 +14,7 @@
 body {
   background: #fbf7f4;
   font-family: "Roboto Condensed", sans-serif;
-  letter-spacing: .1em;
+  letter-spacing: 0.1em;
 }
 
 header {
@@ -124,8 +124,8 @@ button {
   border: none;
   border-radius: 0.5em;
   cursor: pointer;
-  transition: .5s;
-  letter-spacing: .5em;
+  transition: 0.5s;
+  letter-spacing: 0.5em;
 }
 
 button:hover {
